[gd_scene load_steps=3 format=3 uid="uid://bmrb80rd7xypk"]

[ext_resource type="Script" uid="uid://dcjtsnucio3g4" path="res://scenes/ui/menu.gd" id="1_wedc3"]
[ext_resource type="Theme" uid="uid://cvevndji4t07j" path="res://scenes/ui/game_ui_theme.tres" id="2_c2n5p"]

[node name="Menu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wedc3")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -60.0
offset_right = 56.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c2n5p")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="labelAudioContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Music" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/labelAudioContainer"]
layout_mode = 2
text = "Music"

[node name="SFX" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/labelAudioContainer"]
layout_mode = 2
text = "SFX"

[node name="dataAudioContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="musicSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/dataAudioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_c2n5p")
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/dataAudioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_c2n5p")
max_value = 1.0
step = 0.05
value = 1.0

[node name="resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="credit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "credit"

[node name="exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/dataAudioContainer/musicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/dataAudioContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
